modify configure file

--- a/sample-ssh2/src/main/resources/application.properties
+++ b/sample-ssh2/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #jdbc settings
 jdbc.driver=com.mysql.jdbc.Driver
 
-jdbc.url=jdbc\:mysql\://localhost\:3306/hxt?useUnicode\=true&characterEncoding\=gbk
+jdbc.url=jdbc\:mysql\://localhost\:3306/blog?useUnicode\=true&characterEncoding\=gbk
 
 
 
