--- a/sample-ssh2/pom.xml
+++ b/sample-ssh2/pom.xml
@@ -53,6 +53,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.26</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>sample-ssh2</finalName>
