clean invalidate config

--- a/sample-ssh2/src/main/resources/application.properties
+++ b/sample-ssh2/src/main/resources/application.properties
@@ -7,7 +7,7 @@ jdbc.url=jdbc\:mysql\://localhost\:3306/blog?useUnicode\=true&characterEncoding\
 
 
 jdbc.username=root
-jdbc.password=javafan
+jdbc.password=123
 
 datasource.maxActive=10
 datasource.maxIdle=5
