--- a/sample-ssh2/src/main/webapp/WEB-INF/web.xml
+++ b/sample-ssh2/src/main/webapp/WEB-INF/web.xml
@@ -110,8 +110,8 @@
 		<session-timeout>45</session-timeout>
 	</session-config>
 	
-	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
-	</welcome-file-list>
+<!-- 	<welcome-file-list> -->
+<!-- 		<welcome-file>index.jsp</welcome-file> -->
+<!-- 	</welcome-file-list> -->
 
 </web-app>
